tdf#146208 sw DOCX: fix crash at Redo of tracked table changes

Importing DOCX tables with tracked row deletion and insertion,
accepting them, Undo, and accepting them again (or Redo)
crashed LibreOffice, related to the missing Undo support
of deletions in SwExtraRedlineTable.

SwTableRowRedline is not used for DOCX export since
commit dbc2bdffbec9b3f7eba485652cdd43634458b5a6
"tdf#145091 DOCX: don't export obsolete table row change data",
so it's possible to switch off deletion of row changes
in SwExtraRedlineTable to fix crashing, keeping SwTableRowRedline
only to fix the round-trip of the original row change Date
temporarily.

Change-Id: I6ac571656e45c4299a07a63646bb28d6d1fcd081